feat(dev): nova api route para pegar dados sobre as ferramentas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
   "editor.formatOnSave": true,
   "[svg]": {
     "editor.defaultFormatter": "jock.svg"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
