--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,6 @@
     "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react/jsx-runtime",
-    "plugin:perfectionist/recommended-natural",
     "plugin:prettier/recommended"
   ],
   "overrides": [],
@@ -22,13 +21,7 @@
       "jsx": true
     }
   },
-  "plugins": [
-    "react",
-    "prettier",
-    "@typescript-eslint",
-    "react-hooks",
-    "perfectionist"
-  ],
+  "plugins": ["react", "prettier", "@typescript-eslint", "react-hooks"],
   "settings": {
     "react": {
       "version": "detect"
@@ -37,13 +30,6 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/react-in-jsx-scope": "off",
-    "perfectionist/sort-objects": [
-      "error",
-      {
-        "type": "natural",
-        "order": "asc"
-      }
-    ]
+    "react/react-in-jsx-scope": "off"
   }
 }
