--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-loading-skeleton": "^3.3.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
