--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/react-dom": "18.2.6",
     "axios": "^1.5.0",
     "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
+    "lodash.debounce": "^4.0.8",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
@@ -24,6 +25,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.8",
     "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
